--- a/web/css/style.css
+++ b/web/css/style.css
@@ -116,6 +116,26 @@ header {
 	margin: 0.2em 0;
 }
 
+#buses-list {
+	padding: 1em;
+}
+
+#buses-list .bus-list-item {
+	padding: 0.8em 0.3em;
+	font-size: 1.8em;
+	text-align: center;
+	border: 1px #ddd solid;
+	margin: 0.5em;
+	cursor: pointer;
+	transition: .5s;
+}
+#buses-list .bus-list-item:hover {
+	background-color: #e9e9e9;
+}
+#buses-list .selected {
+	background-color: #e9e9e9;
+}
+
 footer {
 	background-color: #1A1A1A;
 	color: #B2B2B2;
