--- a/web/css/style.css
+++ b/web/css/style.css
@@ -116,23 +116,53 @@ header {
 	margin: 0.2em 0;
 }
 
-#buses-list {
+#buses-list,
+#stations-list {
 	padding: 1em;
+	border-top: 1px #ddd solid;
+}
+#buses-list .buses-block,
+#stations-list .stations-block {
+	padding: 1em;
+	border: 1px #ddd solid;
+	margin: 0;
+}
+#buses-list .buses-block .bus-selected-num {
+	padding: 0.8em;
+	font-size: 1.8em;
+	border: 1px #ddd solid;
+	background-color: #e9e9e9;
+	margin: 0.2em 0 0.6em 0;
+	cursor: pointer;
+	transition: .5s;
+}
+
+#buses-list .form-group {
+	padding: 1.2em 2em;
 }
 
 #buses-list .bus-list-item {
 	padding: 0.8em 0.3em;
 	font-size: 1.8em;
-	text-align: center;
 	border: 1px #ddd solid;
-	margin: 0.5em;
+	margin: 0.2em 0 0.6em 0;
 	cursor: pointer;
 	transition: .5s;
 }
-#buses-list .bus-list-item:hover {
+#stations-list .station-list-item {
+	padding: 0.8em 1em;
+	font-size: 1.4em;
+	border: 1px #ddd solid;
+	margin: 0.5em 0;
+	cursor: pointer;
+	transition: .5s;
+}
+#buses-list .bus-list-item:hover,
+#stations-list .station-list-item:hover {
 	background-color: #e9e9e9;
 }
-#buses-list .selected {
+#buses-list .selected,
+#stations-list .selected {
 	background-color: #e9e9e9;
 }
 
