--- a/web/css/style.css
+++ b/web/css/style.css
@@ -85,6 +85,20 @@ a:hover {
 	text-decoration: underline; /* при наведении - подчеркиваем */
 }
 
+.bg-white {
+	background-color: #fff;
+}
+
+.bg-dark {
+	background-color: #1A1A1A;
+}
+
+.bg-gray {
+	background-color: #e9e9e9;
+}
+.bg-light-gray {
+	background-color: #f8f8f8;
+}
 #wrapper {
 	border: 1px #e0e0e0 solid;
 }
@@ -127,6 +141,10 @@ header {
 	border: 1px #ddd solid;
 	margin: 0;
 }
+#buses-list .buses-block {
+	/*background-color: #f8f8f8; */
+	margin: 1em 0;
+}
 #buses-list .buses-block .bus-selected-num {
 	padding: 0.8em;
 	font-size: 1.8em;
@@ -138,20 +156,29 @@ header {
 }
 
 #buses-list .form-group {
-	padding: 1.2em 2em;
+	padding: 1.2em 1em;
+}
+
+.form-group input {
+	padding: 1.2em;
+	font-size: 1.2em;
 }
 
 #buses-list .bus-list-item {
 	padding: 0.8em 0.3em;
 	font-size: 1.8em;
 	border: 1px #ddd solid;
-	margin: 0.2em 0 0.6em 0;
+	/*margin: 0.2em 0 0.6em 0;*/
+	margin: 0.5em;
 	cursor: pointer;
 	transition: .5s;
 }
+#buses-list .stations-block .bus-list-item {
+	font-size: 1.2em;
+}
 #stations-list .station-list-item {
 	padding: 0.8em 1em;
-	font-size: 1.4em;
+	font-size: 1.2em;
 	border: 1px #ddd solid;
 	margin: 0.5em 0;
 	cursor: pointer;
